tests/snapshots/parser_corpus__snapshot_corpus@match-nested.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: tests/corpus/parser/match-nested.i
---
(file
  (let shape (match (var m) ((arm (pctor Some (ptuple (pctor Cons (pvar head) (wild)))) (var head)) (arm (wild) (int 0))))))
