tests/snapshots/parser_corpus__snapshot_corpus@newtype-block.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: tests/corpus/parser/newtype-block.i
---
(file
  (type Point
    (field x (tnamed Float))
    (field y (tnamed Float))))
