tests/snapshots/parser_corpus__snapshot_corpus@question-postfix.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: tests/corpus/parser/question-postfix.i
---
(file
  (let double (block
    (let n (call (var parseInt) (? (var s))))
    (* (var n) (int 2)))))
