tests/snapshots/parser_corpus__snapshot_corpus@sum-with-fields.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: tests/corpus/parser/sum-with-fields.i
---
(file
  (type Shape
    (variant Circle
      (field radius (tnamed Float)))
    (variant Rect
      (field width (tnamed Float))
      (field height (tnamed Float)))))
