tests/snapshots/parser_corpus__snapshot_corpus@use-cherry-pick.i.snap
---
source: tests/parser_corpus.rs
expression: "format!(\"{}\", file)"
input_file: tests/corpus/parser/use-cherry-pick.i
---
(file
  (use Std.IO (cherry print readLine))
  (use Geometry (cherry Point distance)))
